--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/three": "^0.162.0",
     "framer-motion": "^11.0.15",
     "next": "^14.1.4",
+    "next-nprogress-bar": "^2.3.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-type-animation": "^3.2.0",
     "sass": "^1.72.0",
     "three": "^0.162.0"
