--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.1",
+    "@mantine/core": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
     "@types/three": "^0.162.0",
+    "devicons": "^1.8.0",
     "framer-motion": "^11.0.15",
     "next": "^14.1.4",
     "next-nprogress-bar": "^2.3.11",
@@ -29,6 +36,9 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.14.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5"
   }
 }
