--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@react-email/components": "0.0.16",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
     "@types/three": "^0.162.0",
@@ -25,7 +26,9 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-type-animation": "^3.2.0",
+    "resend": "^3.2.0",
     "sass": "^1.72.0",
+    "sonner": "^1.4.41",
     "three": "^0.162.0"
   },
   "devDependencies": {
